예외 추가, 리드미